# libhyscangui

./: CMakeLists.txt  Makefile  translate.sh
doc/: Doxyfile  html_header  mainpage.doxy
hyscangui/: CMakeLists.txt  glad.c  hyscan-cairo.c  hyscan-cairo.h  hyscan-cartesian.c  hyscan-cartesian.h  hyscan-geo-projection.c  hyscan-geo-projection.h  hyscan-gtk-area.c  hyscan-gtk-area.h  hyscan-gtk-crts-map.c  hyscan-gtk-crts-map.h  hyscan-gtk-datetime.c  hyscan-gtk-datetime.h  hyscan-gtk-export.c  hyscan-gtk-export.h  hyscan-gtk-gliko-area-shader.c  hyscan-gtk-gliko-area.c  hyscan-gtk-gliko-area.frag.c  hyscan-gtk-gliko-area.frag.content.c  hyscan-gtk-gliko-area.h  hyscan-gtk-gliko-control.c  hyscan-gtk-gliko-control.h  hyscan-gtk-gliko-drawing.c  hyscan-gtk-gliko-drawing.h  hyscan-gtk-gliko-grid.c  hyscan-gtk-gliko-grid.h  hyscan-gtk-gliko-layer.c  hyscan-gtk-gliko-layer.h  hyscan-gtk-gliko-literal.awk  hyscan-gtk-gliko-minimal.c  hyscan-gtk-gliko-minimal.h  hyscan-gtk-gliko-overlay.c  hyscan-gtk-gliko-overlay.h  hyscan-gtk-gliko-que.h  hyscan-gtk-gliko-view.c  hyscan-gtk-gliko-view.h  hyscan-gtk-gliko.c  hyscan-gtk-gliko.h  hyscan-gtk-layer-common.h  (+217 more)
hyscangui/glad/: glad.h
hyscangui/icons/: README.md
hyscangui/po/: hyscangui.pot
hyscangui/po/en/: hyscangui.po
hyscangui/po/ru/: hyscangui.po
misc/: bing-sat.ini  google-sat.ini  hw-profile.ini  mission.ini  nauticals.ini  planner.ini  yandex-sat.ini  yandex.ini
misc/locale/en/LC_MESSAGES/: hyscangui.mo
misc/locale/ru/LC_MESSAGES/: hyscangui.mo
misc/maps/: bing-sat.ini  google-sat.ini  nauticals.ini  osm.ini  rosreestr.ini  sea-map.ini  tf-landscape.ini  watercolor.ini  wiki.ini  yandex-sat.ini  yandex.ini
tests/: CMakeLists.txt  CMakeLists.txt.orig  cartesian-test.c  gen-gliko-test-data.c  gradient.c  gtk-area-test.c  gtk-datetime-test.c  gtk-export-test.c  gtk-gliko-area-test.c  gtk-gliko-minimal-test.c  gtk-gliko-plus.c  gtk-gliko-test.c  gtk-layer-list-test.c  gtk-map-param-test.c  gtk-map-planner-test.c  gtk-map-test.c  gtk-map-track-item-test.c  gtk-map-track-mod-test.c  gtk-map-track-test.c  gtk-param-test.c  gtk-planner-editor-test.c  gtk-spin-button-test.c  gtk-waterfall-test-gd.c  gtk-waterfall-test.c  hyscan-gtk-map-kit.c  hyscan-gtk-map-kit.h  mark-manager-test.c  mercator-test.c  navigation-model-test.c  nmea-device-virtual-test.c  nmea-file-device-test.c  nmea-file2udp.c  simple-viewer.c  sonar.xml  task-queue-test.c  tile-loader-test.c  tile-loader.c  tile-source-test.c  tile-test.c  tilename-to-geo-test.c  (+2 more)
